Fixed styles, improve CC logo, improve CVV tip I fixed up some of the styles on the payment methods section of the checkout. fixed a couple little weirdnesses. But beyond small fixes, I wanted to do something with the CVV tool-tip, cause as we discussed, it just kidna loaded an image that was far too large just under the box. I moved this into what looks like a pop-up box. but was concerned about people being able to close it, so i made it so if you click anywhere on the page other than the image it pops up, it closes, and also there's a close button (which obviously closes it). Also, I did end up sliding the Credit Card logos into the end of the credit card number box. so after you start entering your number (after a second) it updates the card type with a nice little image of your card type at the end of the input box. I think this is less obtrusive, and just looks nice. Also, it takes out a lot of that vertical space used up by that image. As Larry and I discussed, I wanted to get some of those smaller style things wrapped up so that I can get into some Market Research with KeywordSpy.  So that's what I did, and made those couple fixes along the way, so I think I'm done coding for today, just syncing everything, and then moving onto some market research. and update the README with commit message.
Former-commit-id: 8a078626be2ff37e24f075037f3facac3d0e04c1

--- a/skin/frontend/default/rofcustom/css/cart-checkout.css
+++ b/skin/frontend/default/rofcustom/css/cart-checkout.css
@@ -766,8 +766,21 @@ img, button, input {
 
         /* One Page Checkout Payment Methods Section
         ******************************************************/
+        .opc-wrapper-opc .payment-block {
+            margin-top: 10px !important;
+        }
         .opc-wrapper-opc #co-payment-form {
             padding-top: 20px;
+            margin-bottom: 0px;
+        }
+
+        .opc-wrapper-opc #co-payment-form fieldset {
+            margin-bottom: 0px;
+        }
+
+        .has-credit-card-logos {
+            height: 32px;
+            overflow: hidden;
         }
 
             /* Credit Cart Type Auto-Select Styles
@@ -776,9 +789,20 @@ img, button, input {
                 height: 0;
                 margin-left: -10000px;
             }
-            #credit-card-type {width:228px;}
+            #credit-card-type {
+                position: relative;
+                width: 52px;
+                top: -40px;
+                right: -2px;
+                z-index: 99;
+                left: auto;
+                margin-left: -50px;
+                overflow: hidden;
+                height: 38px;
+                float: right;
+            }
             #credit-card-type li {
-                display: block;
+                display: none;
                 width: 51px;
                 height: 32px;
                 background: url('../images/credit-card-icons.jpg') 0 -32px no-repeat;
@@ -791,6 +815,20 @@ img, button, input {
                 -ms-transition: all .2s;
                 -o-transition: all .2s;
                 transition: all .2s;
+                position: absolute;
+                z-index: 9;
+            }
+            #credit-card-type li.active {
+                display: block;
+                top: 0;
+            }
+            #credit-card-type .NN {
+                display: none;
+            }
+            #credit-card-type .NN.active {
+                display: block;
+                background: none;
+                background-color: transparent;
             }
             #credit-card-type .VI {background-position: 0px -32px;}
             #credit-card-type .MC {background-position: -51px -32px;}
@@ -827,6 +865,29 @@ img, button, input {
                 width: 40%;
                 float: right;
             }
+            .opc-wrapper-opc .payment-block .tool-tip {
+                top: 0 !important;
+                position: absolute;
+                background: #FFF;
+                padding: 20px;
+                margin: -20px;
+                border: 1px solid black;
+                border-radius: 10px;
+                box-shadow: 2px 2px 16px 4px black;
+            }
+            #payment-tool-tip-close {
+                display: block;
+                width: 100%;
+                margin-bottom: 15px;
+                text-align: right;
+            }
+
+        /* Discount Coupon Form
+        ************************************************/
+        .opc-wrapper-opc .discount-block,
+        .opc-wrapper-opc .discount-block form {
+            margin: 0px auto !important;
+        }
 
 
 /* One Page Checkout Review Section
